# TicketCore-High-Load-Event-Booking-System

./: .env.example  .env.k8s-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  create_superuser.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml
k8s/: 01-config.yaml  02-backend-deployment.yaml  03-backend-service.yaml  04-backend-ingress.yaml  05-backend-hpa.yaml  06-backend-pdb.yaml  07-postgres.yaml  08-redis.yaml  09-pgbouncer-config.yaml  10-pgbouncer-deployment.yaml  11-migration-job.yaml  12-alertmanager-config.yaml  13-alertmanager-deployment.yaml
load_tests/: Locust_2026-03-11-16h40_locustfile.py_http___localhost_80.html  locustfile.py  seed.py
migrations/: env.py
migrations/versions/: 0a2ff74b5e73_create_and_upgrade_columns_add.py  1217a828aeb9_ticket_type_architecture_migration.py  36895cbad93a_with_event_init.py  395c86797555_add_restrict_to_ticket_foreign_keys.py  3ecc93ee2e17_initial_schema.py  5cd117e3f448_init_commit.py  6024bf1355a1_add_ticket_owner.py  694afb21028b_init_commit.py  7a72863c6c3b_initial_migration.py  886eaa67b6e1_add_user_model.py  a1c2a40c6c7c_migrate_architecture_to_ticket_types.py  b99bc57a572c_add_ticket_dtatus_enum.py  b99bc57a572c_add_ticket_status_enum.py  c55e58eb26f5_file_fix.py  cd6343e5879c_init_file_fix.py  d6f1bed1d330_remode_cascade_delete.py
nginx/: nginx.conf
prometheus/: prometheus.yml
src/: main.py  worker.py
src/api/: decorators.py  deps.py  health.py
src/api/v1/: auth.py  events.py  payment.py  ticket_type.py  tickets.py
src/core/: __init__.py  config.py  exception.py  logger.py  redis_keys.py  security.py
src/core/metrics/: __init__.py  busines.py  db.py  worker.py
src/db/: base.py  redis.py  session.py
src/models/: __init__.py  event.py  ticket.py  ticket_type.py  user.py
src/repositories/: event.py
src/schemas/: __init__.py  event.py  idempotency.py  payment.py  ticket.py  ticket_type.py  token.py  user.py
src/services/: auth.py  event.py  health.py  idempotency.py  payment.py  ticket.py  ticket_type.py
terraform/: versions.tf
terraform/aws/: ecr.tf  eks.tf  providers.tf  vpc.tf
terraform/dashboards/: cadvisor.json  main.json
terraform/local_observability/: main.tf
tests/: conftest.py  create_test_superuser.py  factories.py  utils.py
tests/integration/: conftest.py
tests/integration/api/: conftest.py
tests/integration/api/v1/: test_auth.py  test_event.py  test_event_pagination.py  test_ticket_type.py  test_tickets.py
tests/integration/models/: test_event_model.py  test_ticket_model.py  test_ticket_type_model.py  test_user_model.py
tests/integration/workers/: test_garbage_collector.py
tests/stress/: conftest.py  test_concurrency.py
tests/unit/models/: test_event_model.py  test_ticket_model.py
tests/unit/schemas/: test_event_schema.py  test_ticket_schema.py  test_ticket_type_schema.py  test_user_schema.py
