[project]
name = "TicketCore"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "arq>=0.26.3",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "greenlet>=3.3.0",
    "multipart>=1.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "redis>=5.3.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "polyfactory>=3.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
